<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/action_friends"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/action_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>